Fixed spacing and text alignment in Block3

--- a/components/Blocks/Block3.module.scss
+++ b/components/Blocks/Block3.module.scss
@@ -9,16 +9,15 @@
 
   display: flex;
   flex-direction: column;
-  align-items: start;
-  justify-content: center;
 
   overflow: hidden;
+  padding: 230px 30px;
+  letter-spacing: -0.05em;
 
   .text {
     font-weight: 300;
     font-size: 80px;
     line-height: 90px;
-    letter-spacing: -0.05em;
 
     margin-bottom: 60px;
 
@@ -28,6 +27,12 @@
   }
   p {
     margin: 0.5em 0;
+
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 35px;
+
+    color: $text-color-secondary;
   }
 }
 
